--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -171,7 +171,8 @@
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"✅ All critical dependencies verified!\")\n",
     "\n",
-    "print(\"=\"*70)print(\"\\nYou can now proceed to upload your project files.\")"
+    "print(\"=\"*70)\n",
+    "print(\"\\nYou can now proceed to upload your project files.\")"
    ]
   },
   {
