--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -5,8 +5,8 @@
    "id": "c19522e8",
    "metadata": {},
    "source": [
-    "# 🧱 Materials Science RAG Platform\n",
-    "## CIF Generation • Property Prediction • Safety-Enforced Synthesis\n",
+    "# Materials Science RAG Platform\n",
+    "## CIF Generation - Property Prediction - Safety-Enforced Synthesis\n",
     "### Powered by Qwen2.5-7B, Qdrant, and Materials ML Models\n",
     "\n",
     "---\n",
@@ -16,11 +16,11 @@
     "- Uses A100 GPU if available\n",
     "- Implements real models (no mocks)\n",
     "- Enforces mandatory safety protocols\n",
-    "- Launches Streamlit UI\n",
+    "- Complete materials discovery pipeline\n",
     "\n",
-    "**DO NOT modify the pipeline logic.** Both this notebook and Streamlit call the same backend.\n",
+    "**All logic is in the shared pipeline backend.**\n",
     "\n",
-    "---"
+    "---\n"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "id": "febf62e0",
    "metadata": {},
    "source": [
-    "## 🔧 Setup: Environment Detection"
+    "## Setup: Environment Detection"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "id": "d0d22d68",
    "metadata": {},
    "source": [
-    "## 📦 Installation"
+    "## Installation"
    ]
   },
   {
@@ -107,9 +107,9 @@
     "!pip install -q matgl pymatgen ase\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"✅ Installation complete!\")\n",
+    "print(\"Installation complete!\")\n",
     "print(\"=\"*70)\n",
-    "print(\"\\n⚠️  CRITICAL: Runtime → Restart runtime NOW!\")\n",
+    "print(\"\\nCRITICAL: Runtime -> Restart runtime NOW!\")\n",
     "print(\"   Then continue from the HuggingFace login cell\")\n",
     "print(\"=\"*70)\n",
     "\n",
@@ -120,7 +120,7 @@
     "    try:\n",
     "        print(f\"  {pkg}: {metadata.version(pkg)}\")\n",
     "    except:\n",
-    "        print(f\"  {pkg}: NOT FOUND\")"
+    "        print(f\"  {pkg}: NOT FOUND\")\n"
    ]
   },
   {
@@ -169,7 +169,7 @@
     "    print(f\"⚠ PyMatGen: Not available - {str(e)[:50]}\")\n",
     "\n",
     "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"✅ All critical dependencies verified!\")\n",
+    "print(\"All critical dependencies verified!\")\n",
     "\n",
     "print(\"=\"*70)\n",
     "print(\"\\nYou can now proceed to upload your project files.\")"
@@ -180,7 +180,7 @@
    "id": "e8cd75f5",
    "metadata": {},
    "source": [
-    "## 🔑 HuggingFace Login (Bypass Rate Limits)\n",
+    "## HuggingFace Login (Bypass Rate Limits)\n",
     "\n",
     "**Required for Qwen2.5 access:**\n",
     "1. Create a free account at [huggingface.co](https://huggingface.co)\n",
@@ -224,7 +224,7 @@
    "id": "31f77d6f",
    "metadata": {},
    "source": [
-    "## 📁 Clone/Setup Project Structure"
+    "## Clone/Setup Project Structure"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "# Extract and verify\n",
     "for filename in uploaded.keys():\n",
     "    if filename.endswith('.zip'):\n",
-    "        print(f\"\\n📦 Extracting {filename}...\")\n",
+    "        print(f\"\\nExtracting {filename}...\")\n",
     "        with zipfile.ZipFile(filename, 'r') as zip_ref:\n",
     "            zip_ref.extractall('.')\n",
     "        print(f\"✓ Extracted to {os.getcwd()}\")\n",
@@ -303,7 +303,7 @@
     "print(\"\\nFolders in current directory:\")\n",
     "for item in sorted(os.listdir('.')):\n",
     "    if os.path.isdir(item) and not item.startswith('.'):\n",
-    "        print(f\"  📁 {item}/\")\n",
+    "        print(f\"  {item}/\")\n",
     "\n",
     "# Verify required files\n",
     "print(\"\\nVerifying required files:\")\n",
@@ -347,7 +347,7 @@
    "id": "94d05e4a",
    "metadata": {},
    "source": [
-    "## 🚀 Initialize Pipeline (THIS IS THE ONLY SOURCE OF TRUTH)"
+    "## Initialize Pipeline (THIS IS THE ONLY SOURCE OF TRUTH)"
    ]
   },
   {
@@ -362,7 +362,7 @@
     "import shutil\n",
     "\n",
     "# Initialize pipeline with appropriate settings\n",
-    "print(\"\\n🚀 INITIALIZING MATERIALS PIPELINE\\n\")\n",
+    "print(\"\\nINITIALIZING MATERIALS PIPELINE\\n\")\n",
     "\n",
     "# Clean up any locked Qdrant storage from previous runs\n",
     "qdrant_path = \"./qdrant_storage\"\n",
@@ -408,7 +408,7 @@
    "id": "9c965fbc",
    "metadata": {},
    "source": [
-    "## 📊 Load Sample Data"
+    "## Load Sample Data"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "id": "c682fd68",
    "metadata": {},
    "source": [
-    "## 📚 Populate Vector Database (Run if Empty)\n",
+    "## Populate Vector Database (Run if Empty)\n",
     "\n",
     "If the database is empty (0 papers), run this cell to scrape papers from PubMed/arXiv for all materials in reaction.csv. This will take 5-10 minutes."
    ]
@@ -470,7 +470,7 @@
    "id": "ec79dd8f",
    "metadata": {},
    "source": [
-    "## 🔬 Example 1: Basic Material Synthesis"
+    "## Example 1: Basic Material Synthesis"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "id": "e6bd8fb1",
    "metadata": {},
    "source": [
-    "## 🔬 Example 1: Basic Material Synthesis (from reaction.csv)"
+    "## Example 2: Element Substitution"
    ]
   },
   {
@@ -647,7 +647,7 @@
    "id": "71dfb2ec",
    "metadata": {},
    "source": [
-    "## 🧪 Example 3: High-Hazard Material (Fluoride from reaction.csv)"
+    "## Example 3: High-Hazard Material (Fluoride from reaction.csv)"
    ]
   },
   {
@@ -682,10 +682,140 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cdc41f4f",
+   "metadata": {},
+   "source": [
+    "## Example 4: Element Substitution with Structure Relaxation\n",
+    "\n",
+    "Test element substitution and use AlignFF to relax the structure for each swap. This demonstrates how different element substitutions affect the material's structure and properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6efdc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test multiple element substitutions\n",
+    "# NOTE: AlignFF relaxation is now automatic for all generated structures!\n",
+    "\n",
+    "print(\"=\" * 80)\n",
+    "print(\"ELEMENT SUBSTITUTION WITH AUTOMATIC RELAXATION\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# Base material from reaction.csv\n",
+    "base_material = \"K2Cu4F10\"\n",
+    "\n",
+    "# Test different substitutions\n",
+    "substitutions_to_test = [\n",
+    "    {\"Cu\": \"Ni\"},  # K2Ni4F10\n",
+    "    {\"Cu\": \"Ag\"},  # K2Ag4F10\n",
+    "    {\"Cu\": \"Zn\"},  # K2Zn4F10\n",
+    "    {\"K\": \"Na\"},   # Na2Cu4F10\n",
+    "]\n",
+    "\n",
+    "print(f\"\\nBase material: {base_material}\")\n",
+    "print(f\"Testing {len(substitutions_to_test)} substitutions\")\n",
+    "print(\"⚡ All structures are automatically relaxed with AlignFF\\n\")\n",
+    "\n",
+    "results_summary = []\n",
+    "\n",
+    "for i, subs in enumerate(substitutions_to_test, 1):\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"[{i}/{len(substitutions_to_test)}] Substitution: {subs}\")\n",
+    "    print(f\"{'='*80}\")\n",
+    "    \n",
+    "    # Run pipeline with substitution\n",
+    "    # AlignFF relaxation happens automatically in STEP 5!\n",
+    "    result = pipeline.run_materials_pipeline(\n",
+    "        composition=base_material,\n",
+    "        substitutions=subs,\n",
+    "        generate_cif=True,\n",
+    "        predict_properties=True,\n",
+    "        generate_synthesis=False,  # Skip synthesis to save time\n",
+    "        retrieve_top_k=0  # Skip literature retrieval\n",
+    "    )\n",
+    "    \n",
+    "    if not result.success:\n",
+    "        print(f\"✗ Failed: {result.errors}\")\n",
+    "        continue\n",
+    "    \n",
+    "    print(f\"\\n✓ Generated: {result.final_formula}\")\n",
+    "    \n",
+    "    # The CIF is already relaxed by AlignFF!\n",
+    "    if result.cif_content:\n",
+    "        print(f\"✓ Relaxed CIF generated ({len(result.cif_content.split(chr(10)))} lines)\")\n",
+    "        \n",
+    "        # Display the relaxed CIF\n",
+    "        print(f\"\\nAlignFF-Relaxed CIF Structure:\")\n",
+    "        print(\"=\" * 80)\n",
+    "        print(result.cif_content)\n",
+    "        print(\"=\" * 80)\n",
+    "        \n",
+    "        # Save relaxed CIF\n",
+    "        relaxed_filename = f\"{result.final_formula}_relaxed.cif\"\n",
+    "        with open(relaxed_filename, 'w') as f:\n",
+    "            f.write(result.cif_content)\n",
+    "        print(f\"\\n✓ Saved: {relaxed_filename}\")\n",
+    "        \n",
+    "        # Show properties from relaxed structure\n",
+    "        if result.predicted_properties:\n",
+    "            print(f\"\\nProperties (from relaxed structure):\")\n",
+    "            print(f\"  Formation Energy: {result.predicted_properties.get('formation_energy_eV_atom', 'N/A')} eV/atom\")\n",
+    "            print(f\"  Band Gap: {result.predicted_properties.get('band_gap_eV', 'N/A')} eV\")\n",
+    "        \n",
+    "        # Store results\n",
+    "        results_summary.append({\n",
+    "            'original': base_material,\n",
+    "            'substitution': str(subs),\n",
+    "            'final_formula': result.final_formula,\n",
+    "            'formation_energy': result.predicted_properties.get('formation_energy_eV_atom') if result.predicted_properties else None,\n",
+    "            'band_gap': result.predicted_properties.get('band_gap_eV') if result.predicted_properties else None,\n",
+    "            'success': True\n",
+    "        })\n",
+    "    else:\n",
+    "        print(f\"✗ No CIF generated\")\n",
+    "        results_summary.append({\n",
+    "            'original': base_material,\n",
+    "            'substitution': str(subs),\n",
+    "            'final_formula': result.final_formula,\n",
+    "            'success': False\n",
+    "        })\n",
+    "\n",
+    "# Print summary\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(\"SUMMARY: ELEMENT SUBSTITUTION RESULTS\")\n",
+    "print(\"=\" * 80)\n",
+    "print(f\"\\nBase Material: {base_material}\")\n",
+    "print(f\"Substitutions Tested: {len(substitutions_to_test)}\")\n",
+    "print(f\"Successful: {sum(1 for r in results_summary if r['success'])}\")\n",
+    "print(\"\\n\" + \"-\" * 80)\n",
+    "\n",
+    "for result in results_summary:\n",
+    "    print(f\"\\n{result['substitution']:20s} → {result['final_formula']:15s}\")\n",
+    "    if result['success']:\n",
+    "        if result['formation_energy'] is not None:\n",
+    "            print(f\"  Formation Energy: {result['formation_energy']:.4f} eV/atom\")\n",
+    "            print(f\"  Band Gap:         {result['band_gap']:.4f} eV\")\n",
+    "        else:\n",
+    "            print(f\"  Status: CIF generated (no properties)\")\n",
+    "    else:\n",
+    "        print(f\"  Status: Failed\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 80)\n",
+    "print(f\"✓ All substitutions processed!\")\n",
+    "print(f\"✓ All structures automatically relaxed with AlignFF\")\n",
+    "print(f\"✓ Relaxed CIF files saved\")\n",
+    "print(\"=\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6761060",
    "metadata": {},
    "source": [
-    "## 📈 Pipeline Statistics"
+    "## Pipeline Statistics"
    ]
   },
   {
@@ -713,43 +843,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b52826f9",
-   "metadata": {},
-   "source": [
-    "## 🌐 Launch Streamlit UI\n",
-    "\n",
-    "The Streamlit app uses the SAME pipeline backend as this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e8e260b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if IN_COLAB:\n",
-    "    print(\"To launch Streamlit in Colab:\")\n",
-    "    print(\"\")\n",
-    "    print(\"1. Run the following command in a terminal:\")\n",
-    "    print(\"   !streamlit run streamlit_app.py &\")\n",
-    "    print(\"\")\n",
-    "    print(\"2. Use localtunnel to expose the app:\")\n",
-    "    print(\"   !npx localtunnel --port 8501\")\n",
-    "    print(\"\")\n",
-    "    print(\"Note: The Streamlit app calls the SAME pipeline as this notebook.\")\n",
-    "    print(\"      No logic duplication.\")\n",
-    "else:\n",
-    "    print(\"To launch Streamlit locally:\")\n",
-    "    print(\"  streamlit run streamlit_app.py\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1c0ecab9",
    "metadata": {},
    "source": [
-    "## 💾 Save Complete Results"
+    "## Save Complete Results"
    ]
   },
   {
@@ -776,7 +873,7 @@
    "id": "08f3e8b3",
    "metadata": {},
    "source": [
-    "## ✅ Success Criteria Validation\n",
+    "## Success Criteria Validation\n",
     "\n",
     "Verify that all requirements are met:"
    ]
@@ -822,16 +919,16 @@
    "id": "1160263b",
    "metadata": {},
    "source": [
-    "## 🎯 Next Steps\n",
+    "## Next Steps\n",
     "\n",
     "1. **Add more papers**: Use `scrape_papers=True` to populate the vector database\n",
-    "2. **Launch Streamlit**: Run the UI to interact with the same pipeline\n",
-    "3. **Try different materials**: Test with materials from reactions.csv\n",
-    "4. **Explore substitutions**: Create new materials via element substitution\n",
+    "2. **Try different materials**: Test with materials from reactions.csv\n",
+    "3. **Explore substitutions**: Create new materials via element substitution\n",
+    "4. **Property prediction**: Generate CIFs and predict properties with AlignFF\n",
     "\n",
     "---\n",
     "\n",
-    "**Remember**: The pipeline is the ONLY source of logic. Streamlit is just a UI layer."
+    "**All materials are automatically relaxed with AlignFF before property prediction.**\n"
    ]
   }
  ],
